apps/koolna-webui/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koolna-webui
  namespace: koolna
spec:
  selector:
    app: koolna-webui
  ports:
    - port: 80
      targetPort: 8080
